nx-kubeflow-deployment/kubeflow/gateway/orig/kubeflow.gateway.orig.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"Gateway","metadata":{"annotations":{},"name":"kubeflow-gateway","namespace":"kubeflow"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["*"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
  creationTimestamp: "2024-05-11T00:20:25Z"
  generation: 1
  name: kubeflow-gateway
  namespace: kubeflow
  resourceVersion: "57728"
  uid: 0d6a95eb-ed2e-4315-a6b3-249c95b28f75
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
